+ TODO ComboBox auf Aktuelles Buch einrasten
+ TODO Laden map.at gelöschte Übersetzung

v2020_12_18
+ Neu: Fenster Minimieren
+ Neu: Arbeitsstand wird gespeichert
+ Neu: Lesezeichen
+ Neu: Icons + Tooltips
+ Neu: Suche
+ Neu: Import aus CSV (Exportiert aus SQLite3)
+ Neu: Unterstützung weiterer Glyphen (Zeichensätze)
+ Etc: Konsolenfenster versteckt
+ Etc: Verbesserter OSIS-Import
+ Fix: Mehrere Übersetzung mit gleichen Namen in versch. Sprachen
+ Fix: SIGSEGV Übersetzungsauswahl

v2020_12_18
+ Release 1