@@ -1,7 +1,9 @@
+v
++ Neu: Verse beginnen auf gleicher Höhe
 + TODO ComboBox auf Aktuelles Buch einrasten
 + TODO Laden map.at gelöschte Übersetzung
 
-v2020_12_18
+v2020_12_20
 + Neu: Fenster Minimieren
 + Neu: Arbeitsstand wird gespeichert
 + Neu: Lesezeichen
